--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "js-game",
   "version": "1.0.0",
+  "private": true,
+  "homepage": "https://mityaycho.github.io/JS_Diplom_Netology/",
   "description": "",
   "main": "index.html",
   "scripts": {
     "start": "browser-sync start --server --files \"**/*.*\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.18.8"
+    "browser-sync": "^2.18.8",
+    "gh-pages": "^2.2.0"
   }
 }
