add some changes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "browser-sync start --server --files \"**/*.*\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages build"
   },
   "keywords": [],
   "author": "",
