--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "scripts": {
     "start": "browser-sync start --server --files \"**/*.*\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages build"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.26.7",
     "gh-pages": "^2.2.0"
   }
 }
